--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -63,3 +63,16 @@ jobs:
       uses: github/codeql-action/analyze@v2
       with:
         category: "/language:${{matrix.language}}"
+
+  go_test:
+    name: go test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: setup go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.20'
+      - name: go test
+        run: go test
+
