--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -67,6 +67,8 @@ jobs:
   go_test:
     name: go test
     runs-on: ubuntu-latest
+    needs:
+      - analyze
     steps:
       - uses: actions/checkout@v3
       - name: setup go
