--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -24,6 +24,9 @@ jobs:
   call-codeql:
     uses: ./.github/workflows/workflow.yml
     secrets: inherit
+    permissions:
+      actions: read
+      security-events: write
   build:
     runs-on: ubuntu-latest
     permissions:
