--- a/.github/workflows/codeql-and-test.yml
+++ b/.github/workflows/codeql-and-test.yml
@@ -1,11 +1,7 @@
-name: CodeQL
+name: CodeQL and test
 
 on:
   workflow_call:
-  push:
-  pull_request:
-    # The branches below must be a subset of the branches above
-    branches: [ "main" ]
   schedule:
     - cron: '21 23 * * 6'
 
