--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -6,7 +6,12 @@ name: dockerize
 # documentation.
 
 on:
-  workflow_call:
+  push:
+    branches: [ "main" ]
+    # Publish semver tags as releases.
+    tags: [ 'v*.*.*' ]
+  pull_request:
+    branches: [ "main" ]
 
 env:
   # Use docker.io for Docker Hub if empty
@@ -15,8 +20,22 @@ env:
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
+  call-codeql:
+    uses: ./.github/workflows/codeql.yml
+    secrets: inherit
+    permissions:
+      actions: read
+      security-events: write
+      contents: write
+  go-test:
+    uses: ./.github/workflows/test.yml
+    secrets: inherit
+    needs:
+      - call-codeql
   docker:
     runs-on: ubuntu-latest
+    needs:
+      - go-test
     permissions:
       contents: read
       packages: write
