needs for docker

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -35,6 +35,9 @@ jobs:
   docker:
     uses: ./.github/workflows/docker.yml
     secrets: inherit
+    needs:
+      - go-test
+      - call-codeql
     permissions:
       contents: read
       packages: write
