Push docker image (#8)
* test

* remove url

* formatting

* on every push

* only one workflow

* needs

* test docker workflow

* workflow_call

* permissions

* permission contents

* renaming

* more separate workflows

* call only other workflows from workflow.yml

* no needs in test.yml

* needs for docker

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,14 +1,10 @@
 name: go test
 
 on:
-  workflow_run:
-    workflows: [CodeQL]
-    types:
-      - completed
-
-
+  workflow_call:
 jobs:
-  test:
+  go_test:
+    name: go test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
